# talktalk

./: .gitignore  README.md
api/messenger_api/: index.js  package.json  server.js
client/messenger_client/: main.js  package.json
client/messenger_client/src/: App.css  App.js  App.tsx  Chat.js  WebRTCService.ts
server/messenger_server/: Cargo.toml
server/messenger_server/src/: main.rs
